--- a/Index.html
+++ b/Index.html
@@ -58,6 +58,7 @@
             <input type="text" name="dept" id="dept">
 
             <button class="btn btn-primary" id="action" onclick="add();">Add</button>
+            <button class="btn btn-secondary" id="action" onclick="saveEditedData();">Edit</button>
             <button class="btn btn-danger" onclick="toggleVisibility();">Close</button>
         </form>
     </div>
